Projeto vai na web

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ footer .sociais {
   align-items: center;
   justify-content: start;
   width: 14%;
-  margin: 6px;
+  margin: 2rem;
 }
 footer .sociais img {
   width: 5.56rem;
