--- a/style.scss
+++ b/style.scss
@@ -109,7 +109,7 @@ main{
             align-items: center;
             justify-content: start;
             width: 14%;
-            margin: 6px;
+            margin: 2rem;
         }
 
         .sociais img{
